--- a/app/src/main/res/layout/content_lock.xml
+++ b/app/src/main/res/layout/content_lock.xml
@@ -1,40 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.juancho.lockdelivery.LockActivity"
-    tools:showIn="@layout/activity_lock">
+    android:fillViewport="true">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context="com.example.juancho.lockdelivery.LockActivity"
+        tools:showIn="@layout/activity_lock">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/logo"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
+        <ImageView
+            android:id="@+id/img_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/logo_height"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/logo2"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btn_Lock"
-        android:text="@string/btn_Lock"
-        android:onClick="page_Request"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/text_Request"
-        android:layout_alignParentBottom="true"
+
+
+        <Button
+            android:id="@+id/btn_locker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/img_logo"
+            android:layout_marginTop="@dimen/button_margin"
+            android:drawableRight="@drawable/ic_unlocked"
+            android:paddingLeft="@dimen/button_padding"
+            android:text="Unlock" />
+
+        <Button
+            android:id="@+id/btn_distance"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btn_locker"
+            android:layout_marginTop="@dimen/button_margin"
+            android:drawableRight="@drawable/ic_scale"
+            android:paddingLeft="@dimen/button_padding"
+            android:text="Status" />
+
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/text_Request"
+            android:layout_alignParentBottom="true"
         android:text="" />
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
